[gd_scene load_steps=3 format=3 uid="uid://3w4ubqgjin6e"]

[ext_resource type="Script" path="res://scripts/ResourceBar/ResourceBar.gd" id="1_3vew1"]
[ext_resource type="Texture2D" uid="uid://46437e6qsdlc" path="res://images/healthbarcircle.png" id="2_ak8o3"]

[node name="ResourceBar" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_right = -1002.0
offset_bottom = -501.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vew1")

[node name="BackgroundBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("2_ak8o3")
tint_under = Color(0.188235, 0.188235, 0.188235, 1)

[node name="ChangeBarGood" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2_ak8o3")
tint_progress = Color(0.305882, 0.862745, 0, 1)

[node name="ChangeBarBad" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2_ak8o3")
tint_progress = Color(0.788235, 0, 0.0156863, 1)

[node name="BaseBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2_ak8o3")
tint_progress = Color(0.0470588, 0.6, 1, 1)

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="Max" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
horizontal_alignment = 1
vertical_alignment = 2

[node name="Slash" type="Label" parent="HBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Current" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
horizontal_alignment = 1
